--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,11 @@
       <a-assets>
         <img id="person" src="http://www.clipartbest.com/cliparts/Kin/X6g/KinX6gp5T.png">
 
-        <a-asset-item id="akira-obj" src="/assets/models/akira-bike-1.obj"></a-asset-item>
-        <a-asset-item id="akira-mtl" src="/assets/models/akira-bike-1.mtl"></a-asset-item>
+        <!-- <a-asset-item id="akira-obj" src="/assets/models/akira-bike-1.obj"></a-asset-item>
+        <a-asset-item id="akira-mtl" src="/assets/models/akira-bike-1.mtl"></a-asset-item> -->
       </a-assets>
 
-<<<<<<< HEAD
-=======
+
       <a-entity>
         <a-cone height="5"
               radius-top="0.5"
@@ -69,7 +68,7 @@
       </a-entity> -->
 
 <!-- shader test -->
->>>>>>> origin/issue-1-basic-scene
+
       <!-- <a-sphere material-displacement
                 scale="1 1 1"
                 radius="0.2"
@@ -78,11 +77,9 @@
                 segments-width="128">
         <a-animation attribute="scale" direction="alternate-reverse" dur="20000" from="1 1 1" to="4 4 4" repeat="indefinite"></a-animation>
       </a-sphere> -->
-<<<<<<< HEAD
+
 <!-- OBJECTS -->
-      <a-entity obj-model="obj: #akira-obj; mtl: #akira-mtl"></a-entity>
-=======
->>>>>>> origin/issue-1-basic-scene
+      <!-- <a-entity obj-model="obj: #akira-obj; mtl: #akira-mtl"></a-entity> -->
 
 <!-- Person Reference -->
       <a-box id="person-ref" position="-1.4 0.85 0.3" height="1.7" width="0.6" depth="0.2" color="#ffba54" opacity="0.8"></a-box>
