--- a/public/index.html
+++ b/public/index.html
@@ -223,10 +223,19 @@
 
 <!--   Lights     -->
       <a-entity light="color: #9ebbc1; groundColor: #819296; intensity: 0.02; type: ambient"></a-entity>
-      <a-entity id="amb-light-left" position="-12 5 5" light="type: directional; intensity: 0.2; castShadow: true"></a-entity>
-      <a-entity id="amb-light-right" position="12 5 5" light="type: directional; intensity: 0.2; castShadow: true"></a-entity>
+      <a-entity id="amb-light-left"
+        position="-12 5 5"
+        light="type: directional; intensity: 0.2; castShadow: true">
+      </a-entity>
+      <a-entity id="amb-light-right"
+        position="12 5 5"
+        light="type: directional; intensity: 0.2; castShadow: true">
+      </a-entity>
 
-      <a-entity id="amb-light-back" position="5 7 -12" light="color: #4e99a3; groundColor: #ffda99; type: point; castShadow: true"></a-entity>
+      <a-entity id="amb-light-back"
+        position="5 7 -12"
+        light="color: #4e99a3; groundColor: #ffda99; type: point; castShadow: true">
+      </a-entity>
       <a-entity id="amb-back-dir"
         position="2.7 3.55 -8"
         light="color: #abbc9a; groundColor: #ffda99; castShadow: true; shadowCameraFar: 500.69; shadowCameraFov: 90.93; shadowCameraRight: 7.99; shadowCameraBottom: -2; shadowCameraLeft: -8">
@@ -241,7 +250,7 @@
       </a-plane>
       <a-sky color="black" position="" rotation="" scale="" visible="" material="" geometry=""></a-sky>
 <!-- ==============  Temporary  ============== -->
-      <a-entity light="color: #9ebbc1; groundColor: #819296; intensity: 0.5; type: ambient"></a-entity>
+      <a-entity id="temp-light-amb" light="color: #9ebbc1; groundColor: #819296; intensity: 0.5; type: ambient"></a-entity>
     </a-scene>
 
   </body>
