--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,11 @@
 
     </script>
 
-    <script src="../js/index.js"></script>
+
   </head>
   <body>
 
-    <a-scene fog="type: linear; color: black; density: 0.01" shadow="type: pcfsoft" light="shadowMapType: basic"> <!-- fog="color: black; density: 0.8; far: 10; near: 4" or fog="color: black; density: 0.12; far: 10; near: 10; type: exponential" -->
+    <a-scene fog="type: linear; color: black; density: 0.01" shadow="type: pcfsoft" light="shadowMapType: basic" stats> <!-- fog="color: black; density: 0.8; far: 10; near: 4" or fog="color: black; density: 0.12; far: 10; near: 10; type: exponential" -->
       <a-assets>
         <img id="person" src="http://www.clipartbest.com/cliparts/Kin/X6g/KinX6gp5T.png">
 
@@ -80,26 +80,40 @@
 
 <!-- OBJECTS -->
       <!-- <a-entity obj-model="obj: #akira-obj; mtl: #akira-mtl"></a-entity> -->
-      <a-entity id="akira" geometry="depth: 0.1; height: 0.1; width: 0.1" position="-0.85 0.8 1"
-        material="color: red"></a-entity>
+      <a-entity id="akira" geometry="depth: 0.1; height: 0.1; width: 0.1"
+        position="-0.85 0.8 1"
+        material="color: red">
+      </a-entity>
 
-      <a-entity id="district-9" geometry="depth: 0.1; height: 0.1; width: 0.1" position="-0.223 0.8 1.2"
-        material="color: orange"></a-entity>
+      <a-entity id="district-9" geometry="depth: 0.1; height: 0.1; width: 0.1"
+        position="-0.223 0.8 1.2"
+        material="color: orange">
+      </a-entity>
 
-      <a-entity id="minority-report" geometry="depth: 0.1; height: 0.1; width: 0.1" position="-0.559 0.8 1.4"
-        material="color: white"></a-entity>
+      <a-entity id="minority-report" geometry="depth: 0.1; height: 0.1; width: 0.1"
+        position="-0.559 0.8 1.4"
+        material="color: white">
+      </a-entity>
 
-      <a-entity id="twelve-monkeys" geometry="depth: 0.1; height: 0.1; width: 0.1" position="0.258 0.8 1.9"
-        material="color: gray"></a-entity>
+      <a-entity id="twelve-monkeys" geometry="depth: 0.1; height: 0.1; width: 0.1"
+        position="0.258 0.8 1.9"
+        material="color: gray">
+      </a-entity>
 
-      <a-entity id="metropolis" geometry="depth: 0.1; height: 0.1; width: 0.1" position="0.36 0.8 1.6"
-        material="color: yellow"></a-entity>
+      <a-entity id="metropolis" geometry="depth: 0.1; height: 0.1; width: 0.1"
+        position="0.36 0.8 1.6"
+        material="color: yellow">
+      </a-entity>
 
-      <a-entity id="design-blimp" geometry="depth: 0.1; height: 0.1; width: 0.1" position="-0.5 0.8 1.9"
-        material="color: purple"></a-entity>
+      <a-entity id="design-blimp" geometry="depth: 0.1; height: 0.1; width: 0.1"
+        position="-0.5 0.8 1.9"
+        material="color: purple">
+      </a-entity>
 
-      <a-entity id="technology-vk" geometry="depth: 0.1; height: 0.1; width: 0.1" position="0.66 0.8 1.57"
-        material="color: black"></a-entity>
+      <a-entity id="tech-vk" geometry="depth: 0.1; height: 0.1; width: 0.1"
+        position="0.66 0.8 1.57"
+        material="color: black">
+      </a-entity>
 
 
 <!-- Person Reference -->
@@ -253,5 +267,6 @@
       <a-entity id="temp-light-amb" light="color: #9ebbc1; groundColor: #819296; intensity: 0.5; type: ambient"></a-entity>
     </a-scene>
 
+    <script src="../client/index.js"></script>
   </body>
 </html>
