all objects hover on gaze

--- a/public/index.html
+++ b/public/index.html
@@ -143,8 +143,12 @@
             fill="both"
             end="5000">
           </a-animation>
-        </a-entity>
-        <!-- <a-entity mixin="hover-light">
+        <!-- </a-entity>
+        <a-entity id="akira-light"
+          light="type: spot; color: #FFF; intensity: 0.6; angle: 12; penumbra: 1"
+          position="0 1 0"
+          rotation="-90 0 0"
+          visible="false">
           <a-animation
             attribute="visible"
             begin="spotlight"
@@ -164,34 +168,101 @@
         </a-entity>
       </a-entity>
 
-      <a-entity class="object-selectable" id="district-9" geometry="depth: 0.1; height: 0.1; width: 0.1"
-        position="-0.223 0.8 1.2"
-        material="color: orange">
+      <a-entity class="object-selectable" id="district-9" position="-0.223 0.8 1.2">
+        <a-entity
+          geometry="depth: 0.1; height: 0.1; width: 0.1"
+          material="color: orange">
+          <a-animation
+            begin="click"
+            attribute="position"
+            from="0 0 0"
+            to="0 0.2 0"
+            dur="2000"
+            fill="both"
+            end="5000">
+          </a-animation>
+        </a-entity>
+
       </a-entity>
 
-      <a-entity class="object-selectable" id="minority-report" geometry="depth: 0.1; height: 0.1; width: 0.1"
-        position="-0.559 0.8 1.4"
-        material="color: white">
+      <a-entity class="object-selectable" id="minority-report" position="-0.559 0.8 1.4">
+        <a-entity
+          geometry="depth: 0.1; height: 0.1; width: 0.1"
+          material="color: white">
+          <a-animation
+            begin="click"
+            attribute="position"
+            from="0 0 0"
+            to="0 0.2 0"
+            dur="2000"
+            fill="both"
+            end="5000">
+          </a-animation>
+        </a-entity>
       </a-entity>
 
-      <a-entity class="object-selectable" id="twelve-monkeys" geometry="depth: 0.1; height: 0.1; width: 0.1"
-        position="0.258 0.8 1.9"
-        material="color: gray">
+      <a-entity class="object-selectable" id="twelve-monkeys" position="0.258 0.8 1.9">
+        <a-entity
+          geometry="depth: 0.1; height: 0.1; width: 0.1"
+          material="color: gray">
+          <a-animation
+            begin="click"
+            attribute="position"
+            from="0 0 0"
+            to="0 0.2 0"
+            dur="2000"
+            fill="both"
+            end="5000">
+          </a-animation>
+        </a-entity>
       </a-entity>
 
-      <a-entity class="object-selectable" id="metropolis" geometry="depth: 0.1; height: 0.1; width: 0.1"
-        position="0.36 0.8 1.6"
-        material="color: yellow">
+      <a-entity class="object-selectable" id="metropolis" position="0.36 0.8 1.6">
+        <a-entity
+          geometry="depth: 0.1; height: 0.1; width: 0.1"
+          material="color: yellow">
+          <a-animation
+            begin="click"
+            attribute="position"
+            from="0 0 0"
+            to="0 0.2 0"
+            dur="2000"
+            fill="both"
+            end="5000">
+          </a-animation>
+        </a-entity>
       </a-entity>
 
-      <a-entity class="object-selectable" id="design-blimp" geometry="depth: 0.1; height: 0.1; width: 0.1"
-        position="-0.5 0.8 1.9"
-        material="color: purple">
+      <a-entity class="object-selectable" id="design-blimp" position="-0.5 0.8 1.9">
+        <a-entity
+          geometry="depth: 0.1; height: 0.1; width: 0.1"
+          material="color: purple">
+          <a-animation
+            begin="click"
+            attribute="position"
+            from="0 0 0"
+            to="0 0.2 0"
+            dur="2000"
+            fill="both"
+            end="5000">
+          </a-animation>
+        </a-entity>
       </a-entity>
 
-      <a-entity class="object-selectable" id="tech-vk" geometry="depth: 0.1; height: 0.1; width: 0.1"
-        position="0.66 0.8 1.57"
-        material="color: black">
+      <a-entity class="object-selectable" id="tech-vk" position="0.66 0.8 1.57">
+        <a-entity
+          geometry="depth: 0.1; height: 0.1; width: 0.1"
+          material="color: black">
+          <a-animation
+            begin="click"
+            attribute="position"
+            from="0 0 0"
+            to="0 0.2 0"
+            dur="2000"
+            fill="both"
+            end="5000">
+          </a-animation>
+        </a-entity>
       </a-entity>
 
 
