--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.8.0/d3.min.js"></script>
 
     </script>
-
+    <script src="../client/index.js"></script>
 
   </head>
   <body>
@@ -131,7 +131,7 @@
 <!-- OBJECTS -->
       <!-- <a-entity obj-model="obj: #akira-obj; mtl: #akira-mtl"></a-entity> -->
       <a-entity class="object-selectable" id="akira" position="-0.85 0.8 1">
-        <a-entity id="akira-obj"
+        <a-entity id="akira-obj" spotlight
           geometry="depth: 0.1; height: 0.1; width: 0.1"
           material="color: red">
           <a-animation
@@ -144,32 +144,10 @@
             end="5000">
           </a-animation>
         </a-entity>
-        <a-entity id="akira-light" emit-on-click="target: #akira-obj; spotlight"
-          light="type: spot; color: #FFF; intensity: 0.6; angle: 12; penumbra: 1"
-          position="0 1 0"
-          rotation="-90 0 0"
-          visible="false">
-          <a-animation
-            attribute="visible"
-            begin="spotlight"
-            to="true">
-          </a-animation>
-
-        </a-entity>
-        <!-- <a-entity mixin="hover-light">
-          <a-animation
-            begin="click"
-            attibute="visible"
-            from="false"
-            to="true"
-            dur="500"
-            fill="both">
-          </a-animation> -->
-        </a-entity>
       </a-entity>
 
       <a-entity class="object-selectable" id="district-9" position="-0.223 0.8 1.2">
-        <a-entity
+        <a-entity spotlight
           geometry="depth: 0.1; height: 0.1; width: 0.1"
           material="color: orange">
           <a-animation
@@ -186,7 +164,7 @@
       </a-entity>
 
       <a-entity class="object-selectable" id="minority-report" position="-0.559 0.8 1.4">
-        <a-entity
+        <a-entity spotlight
           geometry="depth: 0.1; height: 0.1; width: 0.1"
           material="color: white">
           <a-animation
@@ -202,7 +180,7 @@
       </a-entity>
 
       <a-entity class="object-selectable" id="twelve-monkeys" position="0.258 0.8 1.9">
-        <a-entity
+        <a-entity spotlight
           geometry="depth: 0.1; height: 0.1; width: 0.1"
           material="color: gray">
           <a-animation
@@ -218,7 +196,7 @@
       </a-entity>
 
       <a-entity class="object-selectable" id="metropolis" position="0.36 0.8 1.6">
-        <a-entity
+        <a-entity spotlight
           geometry="depth: 0.1; height: 0.1; width: 0.1"
           material="color: yellow">
           <a-animation
@@ -234,7 +212,7 @@
       </a-entity>
 
       <a-entity class="object-selectable" id="design-blimp" position="-0.5 0.8 1.9">
-        <a-entity
+        <a-entity spotlight
           geometry="depth: 0.1; height: 0.1; width: 0.1"
           material="color: purple">
           <a-animation
@@ -250,7 +228,7 @@
       </a-entity>
 
       <a-entity class="object-selectable" id="tech-vk" position="0.66 0.8 1.57">
-        <a-entity
+        <a-entity spotlight
           geometry="depth: 0.1; height: 0.1; width: 0.1"
           material="color: black">
           <a-animation
@@ -408,6 +386,6 @@
       <a-entity id="temp-light-amb" light="color: #9ebbc1; groundColor: #819296; intensity: 0.5; type: ambient"></a-entity>
     </a-scene>
 
-    <script src="../client/index.js"></script>
+
   </body>
 </html>
