--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
               from="0.1 0.1 0.1"
               to="1 1 1"
               dur="150"> -->
-            </a-animation>
+            <!-- </a-animation>
             <a-animation
               begin="fusing"
               easing="ease-in"
@@ -72,7 +72,7 @@
               from="1 1 1"
               to="0.1 0.1 0.1"
               dur="1500">
-            </a-animation>
+            </a-animation> -->
           </a-entity>
 
           <!-- <a-entity
@@ -143,6 +143,15 @@
             fill="both"
             end="5000">
           </a-animation>
+          <a-animation
+            begin="click"
+            attribute="rotation"
+            from="0 0 0"
+            to="0 360 0"
+            dur="2000"
+            fill="both"
+            end="5000">
+          </a-animation>
         </a-entity>
       </a-entity>
 
@@ -155,6 +164,15 @@
             attribute="position"
             from="0 0 0"
             to="0 0.2 0"
+            dur="2000"
+            fill="both"
+            end="5000">
+          </a-animation>
+          <a-animation
+            begin="click"
+            attribute="rotation"
+            from="0 0 0"
+            to="0 360 0"
             dur="2000"
             fill="both"
             end="5000">
@@ -176,6 +194,15 @@
             fill="both"
             end="5000">
           </a-animation>
+          <a-animation
+            begin="click"
+            attribute="rotation"
+            from="0 0 0"
+            to="0 360 0"
+            dur="2000"
+            fill="both"
+            end="5000">
+          </a-animation>
         </a-entity>
       </a-entity>
 
@@ -188,6 +215,15 @@
             attribute="position"
             from="0 0 0"
             to="0 0.2 0"
+            dur="2000"
+            fill="both"
+            end="5000">
+          </a-animation>
+          <a-animation
+            begin="click"
+            attribute="rotation"
+            from="0 0 0"
+            to="0 360 0"
             dur="2000"
             fill="both"
             end="5000">
@@ -208,6 +244,15 @@
             fill="both"
             end="5000">
           </a-animation>
+          <a-animation
+            begin="click"
+            attribute="rotation"
+            from="0 0 0"
+            to="0 360 0"
+            dur="2000"
+            fill="both"
+            end="5000">
+          </a-animation>
         </a-entity>
       </a-entity>
 
@@ -224,6 +269,15 @@
             fill="both"
             end="5000">
           </a-animation>
+          <a-animation
+            begin="click"
+            attribute="rotation"
+            from="0 0 0"
+            to="0 360 0"
+            dur="2000"
+            fill="both"
+            end="5000">
+          </a-animation>
         </a-entity>
       </a-entity>
 
@@ -236,6 +290,15 @@
             attribute="position"
             from="0 0 0"
             to="0 0.2 0"
+            dur="2000"
+            fill="both"
+            end="5000">
+          </a-animation>
+          <a-animation
+            begin="click"
+            attribute="rotation"
+            from="0 0 0"
+            to="0 360 0"
             dur="2000"
             fill="both"
             end="5000">
