--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
             position="0 0 -1"
             geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
             material="color: #f4b342; shader: flat">
+            <!-- Cursor Animation -->
             <!-- <a-animation
               begin="click"
               easing="ease-in"
@@ -62,10 +63,10 @@
               fill="backwards"
               from="0.1 0.1 0.1"
               to="1 1 1"
-              dur="150"> -->
-            <!-- </a-animation>
+              dur="1500">
+            </a-animation>
             <a-animation
-              begin="fusing"
+              begin="cursor-fusing"
               easing="ease-in"
               attribute="scale"
               fill="forwards"
@@ -83,7 +84,7 @@
         </a-entity>
       </a-entity>
 
-      <a-entity>
+      <!-- <a-entity>
         <a-cone height="5"
               radius-top="0.5"
               radius-bottom="1.5"
@@ -100,7 +101,7 @@
                  penumbra="0.57"
                  shadowCameraFar="499.87">
         </a-light>
-      </a-entity>
+      </a-entity> -->
 
 <!-- test volumetric lighting -->
 
@@ -135,22 +136,37 @@
           geometry="depth: 0.1; height: 0.1; width: 0.1"
           material="color: red">
           <a-animation
-            begin="click"
+            begin="mouseenter"
             attribute="position"
             from="0 0 0"
             to="0 0.2 0"
             dur="2000"
-            fill="both"
-            end="5000">
+            fill="both">
           </a-animation>
           <a-animation
-            begin="click"
+            begin="mouseenter"
             attribute="rotation"
             from="0 0 0"
             to="0 360 0"
             dur="2000"
-            fill="both"
-            end="5000">
+            fill="both">
+          </a-animation>
+
+          <a-animation
+            begin="mouseleave"
+            attribute="position"
+            from="0 0.2 0"
+            to="0 0 0"
+            dur="2000"
+            fill="both">
+          </a-animation>
+          <a-animation
+            begin="mouseleave"
+            attribute="rotation"
+            from="0 360 0"
+            to="0 0 0"
+            dur="2000"
+            fill="both">
           </a-animation>
         </a-entity>
       </a-entity>
@@ -160,22 +176,37 @@
           geometry="depth: 0.1; height: 0.1; width: 0.1"
           material="color: orange">
           <a-animation
-            begin="click"
+            begin="mouseenter"
             attribute="position"
             from="0 0 0"
             to="0 0.2 0"
             dur="2000"
-            fill="both"
-            end="5000">
+            fill="both">
           </a-animation>
           <a-animation
-            begin="click"
+            begin="mouseenter"
             attribute="rotation"
             from="0 0 0"
             to="0 360 0"
             dur="2000"
-            fill="both"
-            end="5000">
+            fill="both">
+          </a-animation>
+
+          <a-animation
+            begin="mouseleave"
+            attribute="position"
+            from="0 0.2 0"
+            to="0 0 0"
+            dur="2000"
+            fill="both">
+          </a-animation>
+          <a-animation
+            begin="mouseleave"
+            attribute="rotation"
+            from="0 360 0"
+            to="0 0 0"
+            dur="2000"
+            fill="both">
           </a-animation>
         </a-entity>
 
@@ -186,22 +217,37 @@
           geometry="depth: 0.1; height: 0.1; width: 0.1"
           material="color: white">
           <a-animation
-            begin="click"
+            begin="mouseenter"
             attribute="position"
             from="0 0 0"
             to="0 0.2 0"
             dur="2000"
-            fill="both"
-            end="5000">
+            fill="both">
           </a-animation>
           <a-animation
-            begin="click"
+            begin="mouseenter"
             attribute="rotation"
             from="0 0 0"
             to="0 360 0"
             dur="2000"
-            fill="both"
-            end="5000">
+            fill="both">
+          </a-animation>
+
+          <a-animation
+            begin="mouseleave"
+            attribute="position"
+            from="0 0.2 0"
+            to="0 0 0"
+            dur="2000"
+            fill="both">
+          </a-animation>
+          <a-animation
+            begin="mouseleave"
+            attribute="rotation"
+            from="0 360 0"
+            to="0 0 0"
+            dur="2000"
+            fill="both">
           </a-animation>
         </a-entity>
       </a-entity>
@@ -211,22 +257,37 @@
           geometry="depth: 0.1; height: 0.1; width: 0.1"
           material="color: gray">
           <a-animation
-            begin="click"
+            begin="mouseenter"
             attribute="position"
             from="0 0 0"
             to="0 0.2 0"
             dur="2000"
-            fill="both"
-            end="5000">
+            fill="both">
           </a-animation>
           <a-animation
-            begin="click"
+            begin="mouseenter"
             attribute="rotation"
             from="0 0 0"
             to="0 360 0"
             dur="2000"
-            fill="both"
-            end="5000">
+            fill="both">
+          </a-animation>
+
+          <a-animation
+            begin="mouseleave"
+            attribute="position"
+            from="0 0.2 0"
+            to="0 0 0"
+            dur="2000"
+            fill="both">
+          </a-animation>
+          <a-animation
+            begin="mouseleave"
+            attribute="rotation"
+            from="0 360 0"
+            to="0 0 0"
+            dur="2000"
+            fill="both">
           </a-animation>
         </a-entity>
       </a-entity>
@@ -236,22 +297,37 @@
           geometry="depth: 0.1; height: 0.1; width: 0.1"
           material="color: yellow">
           <a-animation
-            begin="click"
+            begin="mouseenter"
             attribute="position"
             from="0 0 0"
             to="0 0.2 0"
             dur="2000"
-            fill="both"
-            end="5000">
+            fill="both">
           </a-animation>
           <a-animation
-            begin="click"
+            begin="mouseenter"
             attribute="rotation"
             from="0 0 0"
             to="0 360 0"
             dur="2000"
-            fill="both"
-            end="5000">
+            fill="both">
+          </a-animation>
+
+          <a-animation
+            begin="mouseleave"
+            attribute="position"
+            from="0 0.2 0"
+            to="0 0 0"
+            dur="2000"
+            fill="both">
+          </a-animation>
+          <a-animation
+            begin="mouseleave"
+            attribute="rotation"
+            from="0 360 0"
+            to="0 0 0"
+            dur="2000"
+            fill="both">
           </a-animation>
         </a-entity>
       </a-entity>
@@ -261,22 +337,37 @@
           geometry="depth: 0.1; height: 0.1; width: 0.1"
           material="color: purple">
           <a-animation
-            begin="click"
+            begin="mouseenter"
             attribute="position"
             from="0 0 0"
             to="0 0.2 0"
             dur="2000"
-            fill="both"
-            end="5000">
+            fill="both">
           </a-animation>
           <a-animation
-            begin="click"
+            begin="mouseenter"
             attribute="rotation"
             from="0 0 0"
             to="0 360 0"
             dur="2000"
-            fill="both"
-            end="5000">
+            fill="both">
+          </a-animation>
+
+          <a-animation
+            begin="mouseleave"
+            attribute="position"
+            from="0 0.2 0"
+            to="0 0 0"
+            dur="2000"
+            fill="both">
+          </a-animation>
+          <a-animation
+            begin="mouseleave"
+            attribute="rotation"
+            from="0 360 0"
+            to="0 0 0"
+            dur="2000"
+            fill="both">
           </a-animation>
         </a-entity>
       </a-entity>
@@ -286,22 +377,37 @@
           geometry="depth: 0.1; height: 0.1; width: 0.1"
           material="color: black">
           <a-animation
-            begin="click"
+            begin="mouseenter"
             attribute="position"
             from="0 0 0"
             to="0 0.2 0"
             dur="2000"
-            fill="both"
-            end="5000">
+            fill="both">
           </a-animation>
           <a-animation
-            begin="click"
+            begin="mouseenter"
             attribute="rotation"
             from="0 0 0"
             to="0 360 0"
             dur="2000"
-            fill="both"
-            end="5000">
+            fill="both">
+          </a-animation>
+
+          <a-animation
+            begin="mouseleave"
+            attribute="position"
+            from="0 0.2 0"
+            to="0 0 0"
+            dur="2000"
+            fill="both">
+          </a-animation>
+          <a-animation
+            begin="mouseleave"
+            attribute="rotation"
+            from="0 360 0"
+            to="0 0 0"
+            dur="2000"
+            fill="both">
           </a-animation>
         </a-entity>
       </a-entity>
