delay added to objects before descending

--- a/public/index.html
+++ b/public/index.html
@@ -153,6 +153,8 @@
           </a-animation>
 
           <a-animation
+
+              delay="7000"delay="7000"
             begin="mouseleave"
             attribute="position"
             from="0 0.2 0"
@@ -161,6 +163,7 @@
             fill="both">
           </a-animation>
           <a-animation
+            delay="7000"
             begin="mouseleave"
             attribute="rotation"
             from="0 360 0"
@@ -193,6 +196,7 @@
           </a-animation>
 
           <a-animation
+            delay="7000"
             begin="mouseleave"
             attribute="position"
             from="0 0.2 0"
@@ -201,6 +205,7 @@
             fill="both">
           </a-animation>
           <a-animation
+            delay="7000"
             begin="mouseleave"
             attribute="rotation"
             from="0 360 0"
@@ -234,6 +239,7 @@
           </a-animation>
 
           <a-animation
+            delay="7000"
             begin="mouseleave"
             attribute="position"
             from="0 0.2 0"
@@ -242,6 +248,7 @@
             fill="both">
           </a-animation>
           <a-animation
+            delay="7000"
             begin="mouseleave"
             attribute="rotation"
             from="0 360 0"
@@ -274,6 +281,7 @@
           </a-animation>
 
           <a-animation
+            delay="7000"
             begin="mouseleave"
             attribute="position"
             from="0 0.2 0"
@@ -282,6 +290,7 @@
             fill="both">
           </a-animation>
           <a-animation
+            delay="7000"
             begin="mouseleave"
             attribute="rotation"
             from="0 360 0"
@@ -314,6 +323,7 @@
           </a-animation>
 
           <a-animation
+            delay="7000"
             begin="mouseleave"
             attribute="position"
             from="0 0.2 0"
@@ -322,6 +332,7 @@
             fill="both">
           </a-animation>
           <a-animation
+            delay="7000"
             begin="mouseleave"
             attribute="rotation"
             from="0 360 0"
@@ -354,6 +365,7 @@
           </a-animation>
 
           <a-animation
+            delay="7000"
             begin="mouseleave"
             attribute="position"
             from="0 0.2 0"
@@ -362,6 +374,7 @@
             fill="both">
           </a-animation>
           <a-animation
+            delay="7000"
             begin="mouseleave"
             attribute="rotation"
             from="0 360 0"
@@ -394,6 +407,7 @@
           </a-animation>
 
           <a-animation
+            delay="7000"
             begin="mouseleave"
             attribute="position"
             from="0 0.2 0"
@@ -402,6 +416,7 @@
             fill="both">
           </a-animation>
           <a-animation
+            delay="7000"
             begin="mouseleave"
             attribute="rotation"
             from="0 360 0"
