--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,16 @@
 
     <script src="https://mannymeadows.github.io/Noosa/aframe-extras.js"></script>
     <script src="https://rawgit.com/andreasplesch/aframe-crease-component/master/dist/aframe-crease-component.min.js"></script>
-    <script src="https://cdn.rawgit.com/tizzle/aframe-sprite-component/master/dist/aframe-sprite-component.min.js"></script>
+
+    <script src="https://rawgit.com/ngokevin/kframe/0.3.0/dist/k-frame.min.js"></script>
     <script src="https://rawgit.com/gmarty/aframe-ui-components/master/dist/aframe-ui-components.min.js"></script>
+    <script src="https://rawgit.com/IdeaSpaceVR/aframe-ui-modal-component/master/dist/aframe-ui-modal-component.min.js"></script>
+    <!-- <script src="https://rawgit.com/scenevr/htmltexture-component/master/dist/aframe-htmltexture-component.min.js"></script> -->
+
+    <!-- <script src="https://cdn.rawgit.com/tizzle/aframe-sprite-component/master/dist/aframe-sprite-component.min.js"></script> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.8.0/d3.min.js"></script>
 
-    </script>
     <script src="../client/index.js"></script>
 
   </head>
@@ -30,17 +34,21 @@
 
         <!-- <a-asset-item id="akira-obj" src="/assets/models/akira-bike-1.obj"></a-asset-item>
         <a-asset-item id="akira-mtl" src="/assets/models/akira-bike-1.mtl"></a-asset-item> -->
-        <a-mixin id="cube-selected" material="color: cyan"></a-mixin>
+
         <a-mixin id="hover-light"
           light="type: spot; color: #FFF; intensity: 0.6; angle: 12; penumbra: 1"
           position="0 1 0"
           rotation="-90 0 0"
           visible="true">
         </a-mixin>
-        <a-mixin id="temp-cube"
-          geometry="depth: 0.1; height: 0.1; width: 0.1"
-          material="color: red">
-        </a-mixin>
+
+
+        <a-mixin id="popup-title" position="0 0.3 0" text="value: Placeholder Title;"></a-mixin>
+        <a-mixin id="popup-img" position="0 0 0"></a-mixin>
+        <a-mixin id="popup-text" position="0 0.7 0" text="value: Placeholder Text Placeholder Text Placeholder Text;"></a-mixin>
+        <a-mixin id="popup-video" position="0 0.2 -0.5"></a-mixin>
+
+
       </a-assets>
 
       <!-- Camera -->
@@ -131,10 +139,13 @@
 
 <!-- OBJECTS -->
       <!-- <a-entity obj-model="obj: #akira-obj; mtl: #akira-mtl"></a-entity> -->
+      <a-entity geometry="primitive: box" scale="0.5 2 0.5" rotation="0 22d 0" position="0 2 -4" draw="width: 128; height: 512;" htmltexture="asset: #popup"></a-entity>
+
       <a-entity class="object-selectable" id="akira" position="-0.85 0.8 1">
         <a-entity id="akira-obj" spotlight
           geometry="depth: 0.1; height: 0.1; width: 0.1"
           material="color: red">
+
           <a-animation
             begin="mouseenter"
             attribute="position"
@@ -540,7 +551,7 @@
 
 <!--   Lights     -->
       <a-entity light="color: #9ebbc1; groundColor: #819296; intensity: 0.02; type: ambient"></a-entity>
-      <a-entity id="amb-light-left"
+      <!-- <a-entity id="amb-light-left"
         position="-12 5 5"
         light="type: directional; intensity: 0.2; castShadow: true">
       </a-entity>
@@ -556,7 +567,7 @@
       <a-entity id="amb-back-dir"
         position="2.7 3.55 -8"
         light="color: #abbc9a; groundColor: #ffda99; castShadow: true; shadowCameraFar: 500.69; shadowCameraFov: 90.93; shadowCameraRight: 7.99; shadowCameraBottom: -2; shadowCameraLeft: -8">
-      </a-entity>
+      </a-entity> -->
 <!-- Exterior -->
       <a-plane id="sky-plane"
         position="0 2.6 -2.98"
@@ -567,7 +578,7 @@
       </a-plane>
       <a-sky color="black" position="" rotation="" scale="" visible="" material="" geometry=""></a-sky>
 <!-- ==============  Temporary  ============== -->
-      <a-entity id="temp-light-amb" light="color: #9ebbc1; groundColor: #819296; intensity: 0.5; type: ambient"></a-entity>
+      <a-entity id="temp-light-amb" light="color: #9ebbc1; groundColor: #819296; intensity: 1; type: ambient"></a-entity>
     </a-scene>
 
 
